# yast-boot-server

./: .cvsignore  .gitignore  README.md  RPMNAME  VERSION  yast2-boot-server.spec.in
.github/workflows/: ci.yml
agents/: Makefile.am
boot-server/src/: Makefile.am  WOL.ycp
doc/: Makefile.am
doc/autodocs/: Makefile.am
package/: yast2-boot-server.changes  yast2-boot-server.spec
src/: Makefile.am  WOL.ycp  wol.desktop  wol.ycp
src/clients/: wol.rb  wol.ycp
src/desktop/: org.opensuse.yast.WoL.desktop  wol.desktop
src/modules/: WOL.rb
